// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataModel empty data set processing should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [],
    [],
    [],
    [],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "year",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": undefined,
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "ie",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "chrome",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "firefox",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "property": "safari",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [],
    ],
    "values": [
      [],
      [],
      [],
      [],
    ],
  },
  "input": {
    "count": 0,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [],
  ],
  "partialValidDataCount": 0,
  "rawData": [],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "ungrouped",
}
`;

exports[`DataModel grouped processing - calculated grouping should generated the expected results for simple histogram example with area bucket calculation 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      2548,
      2548,
      2823,
      2337,
      2824,
      2507,
      2844,
      2954,
      3086,
      3053,
      2395,
      2395,
      2710,
      2765,
      3055,
      3230,
      3380,
      3505,
      1488,
      1874,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": false,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "curb-weight",
        "scope": "test",
        "type": "key",
        "valueType": "range",
      },
    ],
    "values": [
      {
        "groupId": "weight",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "curb-weight",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        0.012,
      ],
    ],
    "groups": [
      [
        2000,
        3000,
      ],
      [
        3000,
        4500,
      ],
      [
        0,
        2000,
      ],
    ],
    "keys": [
      [
        1488,
        3505,
      ],
    ],
    "values": [
      [
        1488,
        3505,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          0.012,
        ],
      ],
      "datumIndices": [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        10,
        11,
        12,
        13,
      ],
      "keys": [
        2000,
        3000,
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          0.004,
        ],
      ],
      "datumIndices": [
        8,
        9,
        14,
        15,
        16,
        17,
      ],
      "keys": [
        3000,
        4500,
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          0.001,
        ],
      ],
      "datumIndices": [
        18,
        19,
      ],
      "keys": [
        0,
        2000,
      ],
      "validScopes": undefined,
    },
  ],
  "input": {
    "count": 20,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      2548,
      2548,
      2823,
      2337,
      2824,
      2507,
      2844,
      2954,
      3086,
      3053,
      2395,
      2395,
      2710,
      2765,
      3055,
      3230,
      3380,
      3505,
      1488,
      1874,
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "curb-weight": 2548,
    },
    {
      "curb-weight": 2548,
    },
    {
      "curb-weight": 2823,
    },
    {
      "curb-weight": 2337,
    },
    {
      "curb-weight": 2824,
    },
    {
      "curb-weight": 2507,
    },
    {
      "curb-weight": 2844,
    },
    {
      "curb-weight": 2954,
    },
    {
      "curb-weight": 3086,
    },
    {
      "curb-weight": 3053,
    },
    {
      "curb-weight": 2395,
    },
    {
      "curb-weight": 2395,
    },
    {
      "curb-weight": 2710,
    },
    {
      "curb-weight": 2765,
    },
    {
      "curb-weight": 3055,
    },
    {
      "curb-weight": 3230,
    },
    {
      "curb-weight": 3380,
    },
    {
      "curb-weight": 3505,
    },
    {
      "curb-weight": 1488,
    },
    {
      "curb-weight": 1874,
    },
  ],
  "rawDataSources": undefined,
  "reduced": {
    "sortedGroupDomain": [
      [
        0,
        2000,
      ],
      [
        2000,
        3000,
      ],
      [
        3000,
        4500,
      ],
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - calculated grouping should generated the expected results for simple histogram example with average bucket calculation 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      27,
      27,
      26,
      30,
      22,
      25,
      25,
      25,
      20,
      22,
      29,
      29,
      28,
      28,
      25,
      22,
      22,
      20,
      53,
      43,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "engine-size",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "mpg",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "highway-mpg",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        48,
      ],
    ],
    "groups": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
    "keys": [
      [
        130,
        152,
        109,
        136,
        131,
        108,
        164,
        209,
        61,
        90,
      ],
    ],
    "values": [
      [
        20,
        53,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          25.5455,
        ],
      ],
      "datumIndices": [
        0,
        1,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "keys": [
        "100 - 150",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          24.4286,
        ],
      ],
      "datumIndices": [
        2,
        12,
        13,
        14,
        15,
        16,
        17,
      ],
      "keys": [
        ">150",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          48,
        ],
      ],
      "datumIndices": [
        18,
        19,
      ],
      "keys": [
        "<100",
      ],
      "validScopes": undefined,
    },
  ],
  "input": {
    "count": 20,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      130,
      130,
      152,
      109,
      136,
      136,
      136,
      136,
      131,
      131,
      108,
      108,
      164,
      164,
      164,
      209,
      209,
      209,
      61,
      90,
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "engine-size": 130,
      "highway-mpg": 27,
    },
    {
      "engine-size": 130,
      "highway-mpg": 27,
    },
    {
      "engine-size": 152,
      "highway-mpg": 26,
    },
    {
      "engine-size": 109,
      "highway-mpg": 30,
    },
    {
      "engine-size": 136,
      "highway-mpg": 22,
    },
    {
      "engine-size": 136,
      "highway-mpg": 25,
    },
    {
      "engine-size": 136,
      "highway-mpg": 25,
    },
    {
      "engine-size": 136,
      "highway-mpg": 25,
    },
    {
      "engine-size": 131,
      "highway-mpg": 20,
    },
    {
      "engine-size": 131,
      "highway-mpg": 22,
    },
    {
      "engine-size": 108,
      "highway-mpg": 29,
    },
    {
      "engine-size": 108,
      "highway-mpg": 29,
    },
    {
      "engine-size": 164,
      "highway-mpg": 28,
    },
    {
      "engine-size": 164,
      "highway-mpg": 28,
    },
    {
      "engine-size": 164,
      "highway-mpg": 25,
    },
    {
      "engine-size": 209,
      "highway-mpg": 22,
    },
    {
      "engine-size": 209,
      "highway-mpg": 22,
    },
    {
      "engine-size": 209,
      "highway-mpg": 20,
    },
    {
      "engine-size": 61,
      "highway-mpg": 53,
    },
    {
      "engine-size": 90,
      "highway-mpg": 43,
    },
  ],
  "rawDataSources": undefined,
  "reduced": {
    "sortedGroupDomain": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - calculated grouping should generated the expected results for simple histogram example with hard-coded buckets 1`] = `
{
  "aggregation": undefined,
  "columns": [],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "engine-size",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [],
  },
  "domain": {
    "aggValues": [
      [
        0,
        11,
      ],
    ],
    "groups": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
    "keys": [
      [
        130,
        152,
        109,
        136,
        131,
        108,
        164,
        209,
        61,
        90,
      ],
    ],
    "values": [],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          11,
        ],
      ],
      "datumIndices": [
        0,
        1,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
      ],
      "keys": [
        "100 - 150",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          7,
        ],
      ],
      "datumIndices": [
        2,
        12,
        13,
        14,
        15,
        16,
        17,
      ],
      "keys": [
        ">150",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          2,
        ],
      ],
      "datumIndices": [
        18,
        19,
      ],
      "keys": [
        "<100",
      ],
      "validScopes": undefined,
    },
  ],
  "input": {
    "count": 20,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      130,
      130,
      152,
      109,
      136,
      136,
      136,
      136,
      131,
      131,
      108,
      108,
      164,
      164,
      164,
      209,
      209,
      209,
      61,
      90,
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "engine-size": 130,
    },
    {
      "engine-size": 130,
    },
    {
      "engine-size": 152,
    },
    {
      "engine-size": 109,
    },
    {
      "engine-size": 136,
    },
    {
      "engine-size": 136,
    },
    {
      "engine-size": 136,
    },
    {
      "engine-size": 136,
    },
    {
      "engine-size": 131,
    },
    {
      "engine-size": 131,
    },
    {
      "engine-size": 108,
    },
    {
      "engine-size": 108,
    },
    {
      "engine-size": 164,
    },
    {
      "engine-size": 164,
    },
    {
      "engine-size": 164,
    },
    {
      "engine-size": 209,
    },
    {
      "engine-size": 209,
    },
    {
      "engine-size": 209,
    },
    {
      "engine-size": 61,
    },
    {
      "engine-size": 90,
    },
  ],
  "rawDataSources": undefined,
  "reduced": {
    "sortedGroupDomain": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
  },
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - grouped example should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      2.9,
      3.7,
      3.3,
      3.2,
      2.7,
      2.7,
      1.1,
    ],
    [
      3.2,
      4.2,
      3.4,
      3.6,
      3.2,
      2.9,
      1.5,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "all",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "total",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "regular",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        7.9,
      ],
    ],
    "groups": [
      [
        "Whole economy",
      ],
      [
        "Finance and business services",
      ],
      [
        "Public sector",
      ],
      [
        "Construction",
      ],
      [
        "Private sector",
      ],
      [
        "Manufacturing",
      ],
      [
        "Wholesaling, retailing, hotels and restaurants",
      ],
    ],
    "keys": [
      [
        "Whole economy",
        "Finance and business services",
        "Public sector",
        "Construction",
        "Private sector",
        "Manufacturing",
        "Wholesaling, retailing, hotels and restaurants",
      ],
    ],
    "values": [
      [
        1.1,
        3.7,
      ],
      [
        1.5,
        4.2,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          6.1,
        ],
      ],
      "datumIndices": [
        0,
      ],
      "keys": [
        "Whole economy",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          7.9,
        ],
      ],
      "datumIndices": [
        1,
      ],
      "keys": [
        "Finance and business services",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          6.7,
        ],
      ],
      "datumIndices": [
        2,
      ],
      "keys": [
        "Public sector",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          6.8,
        ],
      ],
      "datumIndices": [
        3,
      ],
      "keys": [
        "Construction",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          5.9,
        ],
      ],
      "datumIndices": [
        4,
      ],
      "keys": [
        "Private sector",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          5.6,
        ],
      ],
      "datumIndices": [
        5,
      ],
      "keys": [
        "Manufacturing",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          2.6,
        ],
      ],
      "datumIndices": [
        6,
      ],
      "keys": [
        "Wholesaling, retailing, hotels and restaurants",
      ],
      "validScopes": undefined,
    },
  ],
  "input": {
    "count": 7,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      "Whole economy",
      "Finance and business services",
      "Public sector",
      "Construction",
      "Private sector",
      "Manufacturing",
      "Wholesaling, retailing, hotels and restaurants",
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "regular": 3.2,
      "total": 2.9,
      "type": "Whole economy",
    },
    {
      "regular": 4.2,
      "total": 3.7,
      "type": "Finance and business services",
    },
    {
      "regular": 3.4,
      "total": 3.3,
      "type": "Public sector",
    },
    {
      "regular": 3.6,
      "total": 3.2,
      "type": "Construction",
    },
    {
      "regular": 3.2,
      "total": 2.7,
      "type": "Private sector",
    },
    {
      "regular": 2.9,
      "total": 2.7,
      "type": "Manufacturing",
    },
    {
      "regular": 1.5,
      "total": 1.1,
      "type": "Wholesaling, retailing, hotels and restaurants",
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - stacked and normalised example should generated the expected results for 100% stacked area example 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      29.946524064171125,
      31.46067415730337,
      30.167597765363126,
      38.56209150326798,
      42.10526315789474,
      46.03174603174603,
      44.44444444444444,
      46.456692913385815,
      44.27480916030535,
      37.41496598639456,
      35.54216867469879,
      33.33333333333333,
    ],
    [
      50.26737967914438,
      49.438202247191015,
      50.27932960893854,
      41.1764705882353,
      33.83458646616542,
      30.158730158730158,
      30.952380952380953,
      29.13385826771653,
      31.297709923664122,
      40.13605442176871,
      43.97590361445783,
      47.126436781609186,
    ],
    [
      8.556149732620321,
      8.988764044943819,
      8.938547486033519,
      8.49673202614379,
      9.774436090225565,
      10.317460317460318,
      10.317460317460318,
      10.236220472440943,
      9.923664122137406,
      10.884353741496598,
      9.638554216867469,
      9.195402298850574,
    ],
    [
      6.4171122994652405,
      6.741573033707865,
      6.703910614525139,
      7.843137254901961,
      9.022556390977444,
      9.523809523809524,
      9.523809523809524,
      10.236220472440943,
      9.160305343511451,
      6.802721088435375,
      6.024096385542168,
      6.32183908045977,
    ],
    [
      3.7433155080213907,
      2.8089887640449436,
      3.3519553072625694,
      3.2679738562091507,
      3.759398496240602,
      3.174603174603175,
      3.174603174603175,
      3.1496062992125977,
      4.580152671755726,
      4.081632653061225,
      4.216867469879518,
      3.4482758620689653,
    ],
    [
      1.0695187165775402,
      0.5617977528089887,
      0.5586592178770949,
      0.6535947712418301,
      1.5037593984962407,
      0.7936507936507937,
      1.5873015873015874,
      0.7874015748031494,
      0.7633587786259544,
      0.6802721088435374,
      0.6024096385542168,
      0.5747126436781609,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "month",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "all",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "petroleum",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "naturalGas",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "bioenergyWaste",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "property": "nuclear",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 4,
        "missing": Map {},
        "property": "windSolarHydro",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 5,
        "missing": Map {},
        "property": "imported",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        100,
      ],
    ],
    "groups": [
      [
        "Jan",
      ],
      [
        "Feb",
      ],
      [
        "Mar",
      ],
      [
        "Apr",
      ],
      [
        "May",
      ],
      [
        "Jun",
      ],
      [
        "Jul",
      ],
      [
        "Aug",
      ],
      [
        "Sep",
      ],
      [
        "Oct",
      ],
      [
        "Nov",
      ],
      [
        "Dec",
      ],
    ],
    "keys": [
      [
        "Jan",
        "Feb",
        "Mar",
        "Apr",
        "May",
        "Jun",
        "Jul",
        "Aug",
        "Sep",
        "Oct",
        "Nov",
        "Dec",
      ],
    ],
    "values": [
      [
        29.946524064171125,
        46.456692913385815,
      ],
      [
        29.13385826771653,
        50.27932960893854,
      ],
      [
        8.49673202614379,
        10.884353741496598,
      ],
      [
        6.024096385542168,
        10.236220472440943,
      ],
      [
        2.8089887640449436,
        4.580152671755726,
      ],
      [
        0.5586592178770949,
        1.5873015873015874,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        0,
      ],
      "keys": [
        "Jan",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        1,
      ],
      "keys": [
        "Feb",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        2,
      ],
      "keys": [
        "Mar",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        3,
      ],
      "keys": [
        "Apr",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        4,
      ],
      "keys": [
        "May",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        5,
      ],
      "keys": [
        "Jun",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        6,
      ],
      "keys": [
        "Jul",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        7,
      ],
      "keys": [
        "Aug",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        8,
      ],
      "keys": [
        "Sep",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        9,
      ],
      "keys": [
        "Oct",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        10,
      ],
      "keys": [
        "Nov",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        11,
      ],
      "keys": [
        "Dec",
      ],
      "validScopes": undefined,
    },
  ],
  "input": {
    "count": 12,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      "Jan",
      "Feb",
      "Mar",
      "Apr",
      "May",
      "Jun",
      "Jul",
      "Aug",
      "Sep",
      "Oct",
      "Nov",
      "Dec",
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "bioenergyWaste": 1.6,
      "coal": 0.8,
      "imported": 0.2,
      "month": "Jan",
      "naturalGas": 9.4,
      "nuclear": 1.2,
      "petroleum": 5.6,
      "windSolarHydro": 0.7,
    },
    {
      "bioenergyWaste": 1.6,
      "coal": 1.1,
      "imported": 0.1,
      "month": "Feb",
      "naturalGas": 8.8,
      "nuclear": 1.2,
      "petroleum": 5.6,
      "windSolarHydro": 0.5,
    },
    {
      "bioenergyWaste": 1.6,
      "coal": 1.4,
      "imported": 0.1,
      "month": "Mar",
      "naturalGas": 9,
      "nuclear": 1.2,
      "petroleum": 5.4,
      "windSolarHydro": 0.6,
    },
    {
      "bioenergyWaste": 1.3,
      "coal": 0.6,
      "imported": 0.1,
      "month": "Apr",
      "naturalGas": 6.3,
      "nuclear": 1.2,
      "petroleum": 5.9,
      "windSolarHydro": 0.5,
    },
    {
      "bioenergyWaste": 1.3,
      "coal": 0.5,
      "imported": 0.2,
      "month": "May",
      "naturalGas": 4.5,
      "nuclear": 1.2,
      "petroleum": 5.6,
      "windSolarHydro": 0.5,
    },
    {
      "bioenergyWaste": 1.3,
      "coal": 0.5,
      "imported": 0.1,
      "month": "Jun",
      "naturalGas": 3.8,
      "nuclear": 1.2,
      "petroleum": 5.8,
      "windSolarHydro": 0.4,
    },
    {
      "bioenergyWaste": 1.3,
      "coal": 0.4,
      "imported": 0.2,
      "month": "Jul",
      "naturalGas": 3.9,
      "nuclear": 1.2,
      "petroleum": 5.6,
      "windSolarHydro": 0.4,
    },
    {
      "bioenergyWaste": 1.3,
      "coal": 0.4,
      "imported": 0.1,
      "month": "Aug",
      "naturalGas": 3.7,
      "nuclear": 1.3,
      "petroleum": 5.9,
      "windSolarHydro": 0.4,
    },
    {
      "bioenergyWaste": 1.3,
      "coal": 0.7,
      "imported": 0.1,
      "month": "Sep",
      "naturalGas": 4.1,
      "nuclear": 1.2,
      "petroleum": 5.8,
      "windSolarHydro": 0.6,
    },
    {
      "bioenergyWaste": 1.6,
      "coal": 0.6,
      "imported": 0.1,
      "month": "Oct",
      "naturalGas": 5.9,
      "nuclear": 1,
      "petroleum": 5.5,
      "windSolarHydro": 0.6,
    },
    {
      "bioenergyWaste": 1.6,
      "coal": 0.9,
      "imported": 0.1,
      "month": "Nov",
      "naturalGas": 7.3,
      "nuclear": 1,
      "petroleum": 5.9,
      "windSolarHydro": 0.7,
    },
    {
      "bioenergyWaste": 1.6,
      "coal": 0.7,
      "imported": 0.1,
      "month": "Dec",
      "naturalGas": 8.2,
      "nuclear": 1.1,
      "petroleum": 5.8,
      "windSolarHydro": 0.6,
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - stacked and normalised example should generated the expected results for 100% stacked columns example 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      59.712524678576585,
      74.28693389376268,
      74.49944393701765,
      74.84837848647854,
      78.45841011628646,
    ],
    [
      9.755862666730872,
      6.388321614734185,
      5.587263359806844,
      6.0615954746181915,
      9.201245472453454,
    ],
    [
      17.616892184716136,
      11.273090029365255,
      11.53308567100458,
      10.062934151776604,
      3.844443032344157,
    ],
    [
      9.00948620407377,
      5.531346949908065,
      6.056912595216422,
      6.9758140218269675,
      7.015314227616446,
    ],
    [
      0.6837771464342467,
      0.4882951522320629,
      0.4072087289504093,
      0.3297716902431658,
      0.02541780517252335,
    ],
    [
      3.221457119468387,
      2.03201235999776,
      1.9160857080040963,
      1.7215061750565264,
      1.455169346126962,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "all",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "white",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "mixed",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "asian",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "property": "black",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 4,
        "missing": Map {},
        "property": "chinese",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 5,
        "missing": Map {},
        "property": "other",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        100,
      ],
    ],
    "groups": [
      [
        "Nursery",
      ],
      [
        "Primary",
      ],
      [
        "Secondary",
      ],
      [
        "Special",
      ],
      [
        "Referral units",
      ],
    ],
    "keys": [
      [
        "Nursery",
        "Primary",
        "Secondary",
        "Special",
        "Referral units",
      ],
    ],
    "values": [
      [
        59.712524678576585,
        78.45841011628646,
      ],
      [
        5.587263359806844,
        9.755862666730872,
      ],
      [
        3.844443032344157,
        17.616892184716136,
      ],
      [
        5.531346949908065,
        9.00948620407377,
      ],
      [
        0.02541780517252335,
        0.6837771464342467,
      ],
      [
        1.455169346126962,
        3.221457119468387,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        0,
      ],
      "keys": [
        "Nursery",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        1,
      ],
      "keys": [
        "Primary",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        2,
      ],
      "keys": [
        "Secondary",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        3,
      ],
      "keys": [
        "Special",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          100,
        ],
      ],
      "datumIndices": [
        4,
      ],
      "keys": [
        "Referral units",
      ],
      "validScopes": undefined,
    },
  ],
  "input": {
    "count": 5,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      "Nursery",
      "Primary",
      "Secondary",
      "Special",
      "Referral units",
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "asian": 7317,
      "black": 3742,
      "chinese": 284,
      "mixed": 4052,
      "other": 1338,
      "type": "Nursery",
      "white": 24801,
    },
    {
      "asian": 527391,
      "black": 258774,
      "chinese": 22844,
      "mixed": 298866,
      "other": 95064,
      "type": "Primary",
      "white": 3475379,
    },
    {
      "asian": 377168,
      "black": 198080,
      "chinese": 13317,
      "mixed": 182721,
      "other": 62662,
      "type": "Secondary",
      "white": 2436365,
    },
    {
      "asian": 12328,
      "black": 8546,
      "chinese": 404,
      "mixed": 7426,
      "other": 2109,
      "type": "Special",
      "white": 91696,
    },
    {
      "asian": 605,
      "black": 1104,
      "chinese": 4,
      "mixed": 1448,
      "other": 229,
      "type": "Referral units",
      "white": 12347,
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - stacked example should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      4567,
      2842,
      3655,
      905,
      1013,
      1486,
      252,
      97,
    ],
    [
      773,
      938,
      294,
      1139,
      822,
      214,
      539,
      134,
    ],
    [
      274,
      231,
      4,
      621,
      168,
      180,
      37,
      109,
    ],
    [
      388,
      422,
      19,
      919,
      295,
      228,
      100,
      68,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "all",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "ownerOccupied",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "privateRented",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "localAuthority",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "property": "housingAssociation",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        6002,
      ],
    ],
    "groups": [
      [
        "Semi-detached house",
      ],
      [
        "Medium/large terraced house",
      ],
      [
        "Detached house",
      ],
      [
        "Purpose-built flat low rise",
      ],
      [
        "Small terraced house",
      ],
      [
        "Bungalow",
      ],
      [
        "Converted flat",
      ],
      [
        "Purpose-built flat high rise",
      ],
    ],
    "keys": [
      [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    ],
    "values": [
      [
        97,
        4567,
      ],
      [
        134,
        1139,
      ],
      [
        4,
        621,
      ],
      [
        19,
        919,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          6002,
        ],
      ],
      "datumIndices": [
        0,
      ],
      "keys": [
        "Semi-detached house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          4433,
        ],
      ],
      "datumIndices": [
        1,
      ],
      "keys": [
        "Medium/large terraced house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          3972,
        ],
      ],
      "datumIndices": [
        2,
      ],
      "keys": [
        "Detached house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          3584,
        ],
      ],
      "datumIndices": [
        3,
      ],
      "keys": [
        "Purpose-built flat low rise",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          2298,
        ],
      ],
      "datumIndices": [
        4,
      ],
      "keys": [
        "Small terraced house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          2108,
        ],
      ],
      "datumIndices": [
        5,
      ],
      "keys": [
        "Bungalow",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          928,
        ],
      ],
      "datumIndices": [
        6,
      ],
      "keys": [
        "Converted flat",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          0,
          408,
        ],
      ],
      "datumIndices": [
        7,
      ],
      "keys": [
        "Purpose-built flat high rise",
      ],
      "validScopes": undefined,
    },
  ],
  "input": {
    "count": 8,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      "Semi-detached house",
      "Medium/large terraced house",
      "Detached house",
      "Purpose-built flat low rise",
      "Small terraced house",
      "Bungalow",
      "Converted flat",
      "Purpose-built flat high rise",
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "housingAssociation": 388,
      "localAuthority": 274,
      "ownerOccupied": 4567,
      "privateRented": 773,
      "type": "Semi-detached house",
    },
    {
      "housingAssociation": 422,
      "localAuthority": 231,
      "ownerOccupied": 2842,
      "privateRented": 938,
      "type": "Medium/large terraced house",
    },
    {
      "housingAssociation": 19,
      "localAuthority": 4,
      "ownerOccupied": 3655,
      "privateRented": 294,
      "type": "Detached house",
    },
    {
      "housingAssociation": 919,
      "localAuthority": 621,
      "ownerOccupied": 905,
      "privateRented": 1139,
      "type": "Purpose-built flat low rise",
    },
    {
      "housingAssociation": 295,
      "localAuthority": 168,
      "ownerOccupied": 1013,
      "privateRented": 822,
      "type": "Small terraced house",
    },
    {
      "housingAssociation": 228,
      "localAuthority": 180,
      "ownerOccupied": 1486,
      "privateRented": 214,
      "type": "Bungalow",
    },
    {
      "housingAssociation": 100,
      "localAuthority": 37,
      "ownerOccupied": 252,
      "privateRented": 539,
      "type": "Converted flat",
    },
    {
      "housingAssociation": 68,
      "localAuthority": 109,
      "ownerOccupied": 97,
      "privateRented": 134,
      "type": "Purpose-built flat high rise",
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - stacked with accumulation and normalised example should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      76.09130289903365,
      64.11008346492217,
      92.01913393756294,
      25.251116071428573,
      44.081810269799824,
      70.4933586337761,
      27.155172413793103,
      23.774509803921568,
    ],
    [
      88.97034321892703,
      85.26956914053689,
      99.42094662638469,
      57.03125,
      79.852045256745,
      80.64516129032258,
      85.23706896551724,
      56.61764705882353,
    ],
    [
      93.5354881706098,
      90.48048725468081,
      99.52165156092649,
      74.35825892857143,
      87.16275021758051,
      89.18406072106262,
      89.22413793103448,
      83.33333333333333,
    ],
    [
      100,
      100,
      100,
      100,
      100,
      100,
      100,
      100,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "all",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "processor": [Function],
        "property": "ownerOccupied",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "processor": [Function],
        "property": "privateRented",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "processor": [Function],
        "property": "localAuthority",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "processor": [Function],
        "property": "housingAssociation",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        23.7745,
        100,
      ],
    ],
    "groups": [
      [
        "Semi-detached house",
      ],
      [
        "Medium/large terraced house",
      ],
      [
        "Detached house",
      ],
      [
        "Purpose-built flat low rise",
      ],
      [
        "Small terraced house",
      ],
      [
        "Bungalow",
      ],
      [
        "Converted flat",
      ],
      [
        "Purpose-built flat high rise",
      ],
    ],
    "keys": [
      [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    ],
    "values": [
      [
        23.774509803921568,
        92.01913393756294,
      ],
      [
        56.61764705882353,
        99.42094662638469,
      ],
      [
        74.35825892857143,
        99.52165156092649,
      ],
      [
        100,
        100,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          76.0913,
          100,
        ],
      ],
      "datumIndices": [
        0,
      ],
      "keys": [
        "Semi-detached house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          64.1101,
          100,
        ],
      ],
      "datumIndices": [
        1,
      ],
      "keys": [
        "Medium/large terraced house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          92.0191,
          100,
        ],
      ],
      "datumIndices": [
        2,
      ],
      "keys": [
        "Detached house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          25.2511,
          100,
        ],
      ],
      "datumIndices": [
        3,
      ],
      "keys": [
        "Purpose-built flat low rise",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          44.0818,
          100,
        ],
      ],
      "datumIndices": [
        4,
      ],
      "keys": [
        "Small terraced house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          70.4934,
          100,
        ],
      ],
      "datumIndices": [
        5,
      ],
      "keys": [
        "Bungalow",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          27.1552,
          100,
        ],
      ],
      "datumIndices": [
        6,
      ],
      "keys": [
        "Converted flat",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [
        [
          23.7745,
          100,
        ],
      ],
      "datumIndices": [
        7,
      ],
      "keys": [
        "Purpose-built flat high rise",
      ],
      "validScopes": undefined,
    },
  ],
  "input": {
    "count": 8,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      "Semi-detached house",
      "Medium/large terraced house",
      "Detached house",
      "Purpose-built flat low rise",
      "Small terraced house",
      "Bungalow",
      "Converted flat",
      "Purpose-built flat high rise",
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "housingAssociation": 388,
      "localAuthority": 274,
      "ownerOccupied": 4567,
      "privateRented": 773,
      "type": "Semi-detached house",
    },
    {
      "housingAssociation": 422,
      "localAuthority": 231,
      "ownerOccupied": 2842,
      "privateRented": 938,
      "type": "Medium/large terraced house",
    },
    {
      "housingAssociation": 19,
      "localAuthority": 4,
      "ownerOccupied": 3655,
      "privateRented": 294,
      "type": "Detached house",
    },
    {
      "housingAssociation": 919,
      "localAuthority": 621,
      "ownerOccupied": 905,
      "privateRented": 1139,
      "type": "Purpose-built flat low rise",
    },
    {
      "housingAssociation": 295,
      "localAuthority": 168,
      "ownerOccupied": 1013,
      "privateRented": 822,
      "type": "Small terraced house",
    },
    {
      "housingAssociation": 228,
      "localAuthority": 180,
      "ownerOccupied": 1486,
      "privateRented": 214,
      "type": "Bungalow",
    },
    {
      "housingAssociation": 100,
      "localAuthority": 37,
      "ownerOccupied": 252,
      "privateRented": 539,
      "type": "Converted flat",
    },
    {
      "housingAssociation": 68,
      "localAuthority": 109,
      "ownerOccupied": 97,
      "privateRented": 134,
      "type": "Purpose-built flat high rise",
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel grouped processing - stacked with accumulation example should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      4567,
      2842,
      3655,
      905,
      1013,
      1486,
      252,
      97,
    ],
    [
      5340,
      3780,
      3949,
      2044,
      1835,
      1700,
      791,
      231,
    ],
    [
      5614,
      4011,
      3953,
      2665,
      2003,
      1880,
      828,
      340,
    ],
    [
      6002,
      4433,
      3972,
      3584,
      2298,
      2108,
      928,
      408,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "ownerOccupied",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "processor": [Function],
        "property": "ownerOccupied",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "privateRented",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "processor": [Function],
        "property": "privateRented",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "localAuthority",
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "processor": [Function],
        "property": "localAuthority",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "housingAssociation",
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "processor": [Function],
        "property": "housingAssociation",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "groups": [
      [
        "Semi-detached house",
      ],
      [
        "Medium/large terraced house",
      ],
      [
        "Detached house",
      ],
      [
        "Purpose-built flat low rise",
      ],
      [
        "Small terraced house",
      ],
      [
        "Bungalow",
      ],
      [
        "Converted flat",
      ],
      [
        "Purpose-built flat high rise",
      ],
    ],
    "keys": [
      [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    ],
    "values": [
      [
        97,
        4567,
      ],
      [
        231,
        5340,
      ],
      [
        340,
        5614,
      ],
      [
        408,
        6002,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [],
      "datumIndices": [
        0,
      ],
      "keys": [
        "Semi-detached house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [],
      "datumIndices": [
        1,
      ],
      "keys": [
        "Medium/large terraced house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [],
      "datumIndices": [
        2,
      ],
      "keys": [
        "Detached house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [],
      "datumIndices": [
        3,
      ],
      "keys": [
        "Purpose-built flat low rise",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [],
      "datumIndices": [
        4,
      ],
      "keys": [
        "Small terraced house",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [],
      "datumIndices": [
        5,
      ],
      "keys": [
        "Bungalow",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [],
      "datumIndices": [
        6,
      ],
      "keys": [
        "Converted flat",
      ],
      "validScopes": undefined,
    },
    {
      "aggregation": [],
      "datumIndices": [
        7,
      ],
      "keys": [
        "Purpose-built flat high rise",
      ],
      "validScopes": undefined,
    },
  ],
  "input": {
    "count": 8,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      "Semi-detached house",
      "Medium/large terraced house",
      "Detached house",
      "Purpose-built flat low rise",
      "Small terraced house",
      "Bungalow",
      "Converted flat",
      "Purpose-built flat high rise",
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "housingAssociation": 388,
      "localAuthority": 274,
      "ownerOccupied": 4567,
      "privateRented": 773,
      "type": "Semi-detached house",
    },
    {
      "housingAssociation": 422,
      "localAuthority": 231,
      "ownerOccupied": 2842,
      "privateRented": 938,
      "type": "Medium/large terraced house",
    },
    {
      "housingAssociation": 19,
      "localAuthority": 4,
      "ownerOccupied": 3655,
      "privateRented": 294,
      "type": "Detached house",
    },
    {
      "housingAssociation": 919,
      "localAuthority": 621,
      "ownerOccupied": 905,
      "privateRented": 1139,
      "type": "Purpose-built flat low rise",
    },
    {
      "housingAssociation": 295,
      "localAuthority": 168,
      "ownerOccupied": 1013,
      "privateRented": 822,
      "type": "Small terraced house",
    },
    {
      "housingAssociation": 228,
      "localAuthority": 180,
      "ownerOccupied": 1486,
      "privateRented": 214,
      "type": "Bungalow",
    },
    {
      "housingAssociation": 100,
      "localAuthority": 37,
      "ownerOccupied": 252,
      "privateRented": 539,
      "type": "Converted flat",
    },
    {
      "housingAssociation": 68,
      "localAuthority": 109,
      "ownerOccupied": 97,
      "privateRented": 134,
      "type": "Purpose-built flat high rise",
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "grouped",
}
`;

exports[`DataModel missing and invalid data processing - multiple scopes should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      null,
      54.39,
      44.03,
      undefined,
      null,
      17.75,
      -13.3,
      -8.94,
      null,
      3.2,
      2.7,
    ],
    [
      undefined,
      null,
      15.01,
      25.99,
      31.71,
      null,
      42.27,
      47.79,
      51.76,
      null,
      61.72,
    ],
    [
      26.85,
      31.15,
      null,
      22.69,
      undefined,
      14.77,
      null,
      8.97,
      6.75,
      undefined,
      null,
    ],
    [
      2.79,
      4.22,
      5.94,
      null,
      undefined,
      12.63,
      undefined,
      null,
      14.54,
      14.44,
      15.23,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": false,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "year",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": undefined,
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "missingValue": null,
        "property": "ie",
        "scopes": undefined,
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "missingValue": null,
        "property": "chrome",
        "scopes": [
          "series-a",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "missingValue": null,
        "property": "firefox",
        "scopes": [
          "series-b",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "missingValue": null,
        "property": "safari",
        "scopes": [
          "series-c",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [
        "2009",
        "2010",
        "2011",
        "2012",
        "2013",
        "2014",
        "2015",
        "2016",
        "2017",
        "2018",
        "2019",
      ],
    ],
    "values": [
      [
        -13.3,
        54.39,
      ],
      [
        null,
        61.72,
      ],
      [
        null,
        31.15,
      ],
      [
        null,
        15.23,
      ],
    ],
  },
  "input": {
    "count": 11,
  },
  "invalidDataScopes": Map {
    "series-a" => [
      true,
      false,
      false,
      true,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "series-b" => [
      false,
      false,
      false,
      true,
      true,
      false,
      false,
      false,
      false,
      true,
      false,
    ],
    "series-c" => [
      false,
      false,
      false,
      true,
      true,
      false,
      true,
      false,
      false,
      false,
      false,
    ],
  },
  "invalidKeys": undefined,
  "keys": [
    [
      "2009",
      "2010",
      "2011",
      "2012",
      "2013",
      "2014",
      "2015",
      "2016",
      "2017",
      "2018",
      "2019",
    ],
  ],
  "partialValidDataCount": 6,
  "rawData": [
    {
      "chrome": "illegal value",
      "firefox": 26.85,
      "safari": 2.79,
      "year": "2009",
    },
    {
      "firefox": 31.15,
      "ie": 54.39,
      "safari": 4.22,
      "year": "2010",
    },
    {
      "chrome": 15.01,
      "ie": 44.03,
      "safari": 5.94,
      "year": "2011",
    },
    {
      "chrome": 25.99,
      "firefox": 22.69,
      "ie": "illegal value",
      "year": "2012",
    },
    {
      "chrome": 31.71,
      "firefox": undefined,
      "safari": undefined,
      "year": "2013",
    },
    {
      "firefox": 14.77,
      "ie": 17.75,
      "safari": 12.63,
      "year": "2014",
    },
    {
      "chrome": 42.27,
      "ie": -13.3,
      "safari": "illegal value",
      "year": "2015",
    },
    {
      "chrome": 47.79,
      "firefox": 8.97,
      "ie": -8.94,
      "year": "2016",
    },
    {
      "chrome": 51.76,
      "firefox": 6.75,
      "safari": 14.54,
      "year": "2017",
    },
    {
      "firefox": "illegal value",
      "ie": 3.2,
      "safari": 14.44,
      "year": "2018",
    },
    {
      "chrome": 61.72,
      "ie": 2.7,
      "safari": 15.23,
      "year": "2019",
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "ungrouped",
}
`;

exports[`DataModel missing and invalid data processing should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      null,
      54.39,
      44.03,
      NaN,
      null,
      17.75,
      -13.3,
      -8.94,
      null,
      3.2,
      2.7,
    ],
    [
      NaN,
      null,
      15.01,
      25.99,
      31.71,
      null,
      42.27,
      47.79,
      51.76,
      null,
      61.72,
    ],
    [
      26.85,
      31.15,
      null,
      22.69,
      NaN,
      14.77,
      null,
      8.97,
      6.75,
      NaN,
      null,
    ],
    [
      2.79,
      4.22,
      5.94,
      null,
      NaN,
      12.63,
      NaN,
      null,
      14.54,
      14.44,
      15.23,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "year",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": undefined,
        "id": undefined,
        "index": 0,
        "invalidValue": NaN,
        "missing": Map {},
        "missingValue": null,
        "property": "ie",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 1,
        "invalidValue": NaN,
        "missing": Map {},
        "missingValue": null,
        "property": "chrome",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 2,
        "invalidValue": NaN,
        "missing": Map {},
        "missingValue": null,
        "property": "firefox",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 3,
        "invalidValue": NaN,
        "missing": Map {},
        "missingValue": null,
        "property": "safari",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [
        "2009",
        "2010",
        "2011",
        "2012",
        "2013",
        "2014",
        "2015",
        "2016",
        "2017",
        "2018",
        "2019",
      ],
    ],
    "values": [
      [
        -13.3,
        54.39,
      ],
      [
        null,
        61.72,
      ],
      [
        null,
        31.15,
      ],
      [
        null,
        15.23,
      ],
    ],
  },
  "input": {
    "count": 11,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      "2009",
      "2010",
      "2011",
      "2012",
      "2013",
      "2014",
      "2015",
      "2016",
      "2017",
      "2018",
      "2019",
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "chrome": "illegal value",
      "firefox": 26.85,
      "safari": 2.79,
      "year": "2009",
    },
    {
      "firefox": 31.15,
      "ie": 54.39,
      "safari": 4.22,
      "year": "2010",
    },
    {
      "chrome": 15.01,
      "ie": 44.03,
      "safari": 5.94,
      "year": "2011",
    },
    {
      "chrome": 25.99,
      "firefox": 22.69,
      "ie": "illegal value",
      "year": "2012",
    },
    {
      "chrome": 31.71,
      "firefox": undefined,
      "safari": undefined,
      "year": "2013",
    },
    {
      "firefox": 14.77,
      "ie": 17.75,
      "safari": 12.63,
      "year": "2014",
    },
    {
      "chrome": 42.27,
      "ie": -13.3,
      "safari": "illegal value",
      "year": "2015",
    },
    {
      "chrome": 47.79,
      "firefox": 8.97,
      "ie": -8.94,
      "year": "2016",
    },
    {
      "chrome": 51.76,
      "firefox": 6.75,
      "safari": 14.54,
      "year": "2017",
    },
    {
      "firefox": "illegal value",
      "ie": 3.2,
      "safari": 14.44,
      "year": "2018",
    },
    {
      "chrome": 61.72,
      "ie": 2.7,
      "safari": 15.23,
      "year": "2019",
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "ungrouped",
}
`;

exports[`DataModel repeated property processing should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      0,
      0.1478760779303737,
      0.4257425742574256,
      0.7307569466624081,
      1,
    ],
    [
      0.6869,
      0.05,
      0.087,
      0.0955,
      0.0843,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [],
    "values": [
      {
        "groupId": "angleGroup",
        "id": "angle",
        "index": 0,
        "missing": Map {},
        "processor": [Function],
        "property": "share",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "id": "radius",
        "index": 1,
        "missing": Map {},
        "processor": [Function],
        "property": "share",
        "scopes": [
          "test",
        ],
        "type": "value",
        "validation": [Function],
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [],
    "values": [
      [
        0,
        1,
      ],
      [
        0.05,
        0.6869,
      ],
    ],
  },
  "input": {
    "count": 5,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "browser": "Chrome",
      "share": 0.6869,
      "year": 2020,
    },
    {
      "browser": "Edge",
      "share": 0.0463,
      "year": 2020,
    },
    {
      "browser": "Safari",
      "share": 0.087,
      "year": 2020,
    },
    {
      "browser": "Firefox",
      "share": 0.0955,
      "year": 2020,
    },
    {
      "browser": "Other",
      "share": 0.0843,
      "year": 2020,
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "ungrouped",
}
`;

exports[`DataModel ungrouped processing - accumulated and normalised properties should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      0,
      0.1352271965379232,
      0.7709344297471291,
      1.0051423577715735,
      2.698967551519787,
      2.8704412131091117,
      3.1130137099915722,
      6.283185307179586,
    ],
    [
      "Christian",
      "Buddhist",
      "Hindu",
      "Jewish",
      "Muslim",
      "Sikh",
      "Other",
      "None",
    ],
    [
      6.283185307179586,
      0,
      0.5553085980495991,
      0.10982426312401541,
      1.7293454390513978,
      0.040217335791892975,
      0.11910518676829843,
      3.367428462267346,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [],
    "values": [
      {
        "groupId": "population",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "processor": [Function],
        "property": "population",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "index": 1,
        "missing": Map {},
        "property": "religion",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "category",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "population",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [],
    "values": [
      [
        0,
        6.283185307179586,
      ],
      [
        "Christian",
        "Buddhist",
        "Hindu",
        "Jewish",
        "Muslim",
        "Sikh",
        "Other",
        "None",
      ],
      [
        0,
        6.283185307179586,
      ],
    ],
  },
  "input": {
    "count": 8,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "population": 4159000,
      "religion": "Christian",
    },
    {
      "population": 97000,
      "religion": "Buddhist",
    },
    {
      "population": 456000,
      "religion": "Hindu",
    },
    {
      "population": 168000,
      "religion": "Jewish",
    },
    {
      "population": 1215000,
      "religion": "Muslim",
    },
    {
      "population": 123000,
      "religion": "Sikh",
    },
    {
      "population": 174000,
      "religion": "Other",
    },
    {
      "population": 2274000,
      "religion": "None",
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "ungrouped",
}
`;

exports[`DataModel ungrouped processing should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columns": [
    [
      120.27,
      119.53,
      119.12,
      119.29,
      119.13,
      118.97,
      119.05,
      119.22,
      119.72,
      120.1,
      120.48,
      120.83,
      121.7,
      122.75,
      124.06,
      125.43,
      126.36,
      127.5,
      127.97,
      128.51,
      129.14,
      129.41,
      128.89,
      127.66,
      126.66,
      126.49,
      126.86,
      127.13,
      127.81,
      128.03,
      128.37,
      128.36,
      128.17,
      128.22,
      127.86,
      127.79,
      126.92,
      126.78,
      126.92,
      126.87,
      126.91,
      126.4,
      125.77,
      125.56,
      125.59,
      125.58,
      125.32,
      124.81,
      124.75,
      124.33,
      124.16,
      124.96,
    ],
    [
      130.33,
      129.47,
      128.92,
      129.1,
      129.13,
      129.17,
      129.23,
      129.66,
      130.25,
      130.59,
      130.85,
      131.15,
      131.48,
      132.08,
      132.96,
      133.99,
      134.6,
      135.41,
      135.36,
      135.82,
      136.45,
      136.39,
      135.4,
      133.76,
      131.81,
      131.55,
      131.68,
      131.86,
      132.21,
      132.6,
      132.61,
      132.59,
      132.6,
      132.51,
      132.29,
      131.89,
      131.35,
      131.52,
      131.83,
      131.82,
      131.89,
      131.28,
      130.6,
      130.38,
      130.42,
      130.35,
      130.08,
      129.79,
      129.79,
      129.56,
      129.81,
      130.54,
    ],
  ],
  "defs": {
    "allScopesHaveSameDefs": false,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "date",
        "scope": "test",
        "type": "key",
        "valueType": "range",
      },
    ],
    "values": [
      {
        "groupId": undefined,
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "petrol",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "diesel",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [
        2019-01-07T00:00:00.000Z,
        2019-12-30T00:00:00.000Z,
      ],
    ],
    "values": [
      [
        118.97,
        129.41,
      ],
      [
        128.92,
        136.45,
      ],
    ],
  },
  "input": {
    "count": 52,
  },
  "invalidDataScopes": undefined,
  "invalidKeys": undefined,
  "keys": [
    [
      2019-01-07T00:00:00.000Z,
      2019-01-14T00:00:00.000Z,
      2019-01-21T00:00:00.000Z,
      2019-01-28T00:00:00.000Z,
      2019-02-04T00:00:00.000Z,
      2019-02-11T00:00:00.000Z,
      2019-02-18T00:00:00.000Z,
      2019-02-25T00:00:00.000Z,
      2019-03-04T00:00:00.000Z,
      2019-03-11T00:00:00.000Z,
      2019-03-18T00:00:00.000Z,
      2019-03-25T00:00:00.000Z,
      2019-03-31T23:00:00.000Z,
      2019-04-07T23:00:00.000Z,
      2019-04-14T23:00:00.000Z,
      2019-04-21T23:00:00.000Z,
      2019-04-28T23:00:00.000Z,
      2019-05-05T23:00:00.000Z,
      2019-05-12T23:00:00.000Z,
      2019-05-19T23:00:00.000Z,
      2019-05-26T23:00:00.000Z,
      2019-06-02T23:00:00.000Z,
      2019-06-09T23:00:00.000Z,
      2019-06-16T23:00:00.000Z,
      2019-06-23T23:00:00.000Z,
      2019-06-30T23:00:00.000Z,
      2019-07-07T23:00:00.000Z,
      2019-07-14T23:00:00.000Z,
      2019-07-21T23:00:00.000Z,
      2019-07-28T23:00:00.000Z,
      2019-08-04T23:00:00.000Z,
      2019-08-11T23:00:00.000Z,
      2019-08-18T23:00:00.000Z,
      2019-08-25T23:00:00.000Z,
      2019-09-01T23:00:00.000Z,
      2019-09-08T23:00:00.000Z,
      2019-09-15T23:00:00.000Z,
      2019-09-22T23:00:00.000Z,
      2019-09-29T23:00:00.000Z,
      2019-10-06T23:00:00.000Z,
      2019-10-13T23:00:00.000Z,
      2019-10-20T23:00:00.000Z,
      2019-10-28T00:00:00.000Z,
      2019-11-04T00:00:00.000Z,
      2019-11-11T00:00:00.000Z,
      2019-11-18T00:00:00.000Z,
      2019-11-25T00:00:00.000Z,
      2019-12-02T00:00:00.000Z,
      2019-12-09T00:00:00.000Z,
      2019-12-16T00:00:00.000Z,
      2019-12-23T00:00:00.000Z,
      2019-12-30T00:00:00.000Z,
    ],
  ],
  "partialValidDataCount": 0,
  "rawData": [
    {
      "date": 2019-01-07T00:00:00.000Z,
      "diesel": 130.33,
      "petrol": 120.27,
    },
    {
      "date": 2019-01-14T00:00:00.000Z,
      "diesel": 129.47,
      "petrol": 119.53,
    },
    {
      "date": 2019-01-21T00:00:00.000Z,
      "diesel": 128.92,
      "petrol": 119.12,
    },
    {
      "date": 2019-01-28T00:00:00.000Z,
      "diesel": 129.1,
      "petrol": 119.29,
    },
    {
      "date": 2019-02-04T00:00:00.000Z,
      "diesel": 129.13,
      "petrol": 119.13,
    },
    {
      "date": 2019-02-11T00:00:00.000Z,
      "diesel": 129.17,
      "petrol": 118.97,
    },
    {
      "date": 2019-02-18T00:00:00.000Z,
      "diesel": 129.23,
      "petrol": 119.05,
    },
    {
      "date": 2019-02-25T00:00:00.000Z,
      "diesel": 129.66,
      "petrol": 119.22,
    },
    {
      "date": 2019-03-04T00:00:00.000Z,
      "diesel": 130.25,
      "petrol": 119.72,
    },
    {
      "date": 2019-03-11T00:00:00.000Z,
      "diesel": 130.59,
      "petrol": 120.1,
    },
    {
      "date": 2019-03-18T00:00:00.000Z,
      "diesel": 130.85,
      "petrol": 120.48,
    },
    {
      "date": 2019-03-25T00:00:00.000Z,
      "diesel": 131.15,
      "petrol": 120.83,
    },
    {
      "date": 2019-03-31T23:00:00.000Z,
      "diesel": 131.48,
      "petrol": 121.7,
    },
    {
      "date": 2019-04-07T23:00:00.000Z,
      "diesel": 132.08,
      "petrol": 122.75,
    },
    {
      "date": 2019-04-14T23:00:00.000Z,
      "diesel": 132.96,
      "petrol": 124.06,
    },
    {
      "date": 2019-04-21T23:00:00.000Z,
      "diesel": 133.99,
      "petrol": 125.43,
    },
    {
      "date": 2019-04-28T23:00:00.000Z,
      "diesel": 134.6,
      "petrol": 126.36,
    },
    {
      "date": 2019-05-05T23:00:00.000Z,
      "diesel": 135.41,
      "petrol": 127.5,
    },
    {
      "date": 2019-05-12T23:00:00.000Z,
      "diesel": 135.36,
      "petrol": 127.97,
    },
    {
      "date": 2019-05-19T23:00:00.000Z,
      "diesel": 135.82,
      "petrol": 128.51,
    },
    {
      "date": 2019-05-26T23:00:00.000Z,
      "diesel": 136.45,
      "petrol": 129.14,
    },
    {
      "date": 2019-06-02T23:00:00.000Z,
      "diesel": 136.39,
      "petrol": 129.41,
    },
    {
      "date": 2019-06-09T23:00:00.000Z,
      "diesel": 135.4,
      "petrol": 128.89,
    },
    {
      "date": 2019-06-16T23:00:00.000Z,
      "diesel": 133.76,
      "petrol": 127.66,
    },
    {
      "date": 2019-06-23T23:00:00.000Z,
      "diesel": 131.81,
      "petrol": 126.66,
    },
    {
      "date": 2019-06-30T23:00:00.000Z,
      "diesel": 131.55,
      "petrol": 126.49,
    },
    {
      "date": 2019-07-07T23:00:00.000Z,
      "diesel": 131.68,
      "petrol": 126.86,
    },
    {
      "date": 2019-07-14T23:00:00.000Z,
      "diesel": 131.86,
      "petrol": 127.13,
    },
    {
      "date": 2019-07-21T23:00:00.000Z,
      "diesel": 132.21,
      "petrol": 127.81,
    },
    {
      "date": 2019-07-28T23:00:00.000Z,
      "diesel": 132.6,
      "petrol": 128.03,
    },
    {
      "date": 2019-08-04T23:00:00.000Z,
      "diesel": 132.61,
      "petrol": 128.37,
    },
    {
      "date": 2019-08-11T23:00:00.000Z,
      "diesel": 132.59,
      "petrol": 128.36,
    },
    {
      "date": 2019-08-18T23:00:00.000Z,
      "diesel": 132.6,
      "petrol": 128.17,
    },
    {
      "date": 2019-08-25T23:00:00.000Z,
      "diesel": 132.51,
      "petrol": 128.22,
    },
    {
      "date": 2019-09-01T23:00:00.000Z,
      "diesel": 132.29,
      "petrol": 127.86,
    },
    {
      "date": 2019-09-08T23:00:00.000Z,
      "diesel": 131.89,
      "petrol": 127.79,
    },
    {
      "date": 2019-09-15T23:00:00.000Z,
      "diesel": 131.35,
      "petrol": 126.92,
    },
    {
      "date": 2019-09-22T23:00:00.000Z,
      "diesel": 131.52,
      "petrol": 126.78,
    },
    {
      "date": 2019-09-29T23:00:00.000Z,
      "diesel": 131.83,
      "petrol": 126.92,
    },
    {
      "date": 2019-10-06T23:00:00.000Z,
      "diesel": 131.82,
      "petrol": 126.87,
    },
    {
      "date": 2019-10-13T23:00:00.000Z,
      "diesel": 131.89,
      "petrol": 126.91,
    },
    {
      "date": 2019-10-20T23:00:00.000Z,
      "diesel": 131.28,
      "petrol": 126.4,
    },
    {
      "date": 2019-10-28T00:00:00.000Z,
      "diesel": 130.6,
      "petrol": 125.77,
    },
    {
      "date": 2019-11-04T00:00:00.000Z,
      "diesel": 130.38,
      "petrol": 125.56,
    },
    {
      "date": 2019-11-11T00:00:00.000Z,
      "diesel": 130.42,
      "petrol": 125.59,
    },
    {
      "date": 2019-11-18T00:00:00.000Z,
      "diesel": 130.35,
      "petrol": 125.58,
    },
    {
      "date": 2019-11-25T00:00:00.000Z,
      "diesel": 130.08,
      "petrol": 125.32,
    },
    {
      "date": 2019-12-02T00:00:00.000Z,
      "diesel": 129.79,
      "petrol": 124.81,
    },
    {
      "date": 2019-12-09T00:00:00.000Z,
      "diesel": 129.79,
      "petrol": 124.75,
    },
    {
      "date": 2019-12-16T00:00:00.000Z,
      "diesel": 129.56,
      "petrol": 124.33,
    },
    {
      "date": 2019-12-23T00:00:00.000Z,
      "diesel": 129.81,
      "petrol": 124.16,
    },
    {
      "date": 2019-12-30T00:00:00.000Z,
      "diesel": 130.54,
      "petrol": 124.96,
    },
  ],
  "rawDataSources": undefined,
  "time": Any<Number>,
  "type": "ungrouped",
}
`;
